--- a/mamikoFrontEnd/src/app/components/main-container/main-container.component.html
+++ b/mamikoFrontEnd/src/app/components/main-container/main-container.component.html
@@ -1,5 +1,42 @@
-<p>
-  main-container works!
-  
+<div>
+
   <app-tree-categorie></app-tree-categorie>
-</p>
+
+  <div class="centerDiv">
+
+    <div id="filterDiv" class="filterDiv">
+      <h2>La boutique</h2>
+      
+      <button _ngcontent-csr-c224="" mat-raised-button="" color="accent"
+        class="mat-raised-button mat-button-base mat-accent"><span class="mat-button-wrapper">Tous les produits</span>
+        <div matripple="" class="mat-button-ripple mat-ripple"></div>
+        <div class="mat-button-focus-overlay"></div>
+      </button>
+
+      <button _ngcontent-csr-c224="" mat-raised-button="" color="accent"
+        class="mat-raised-button mat-button-base mat-accent"><span class="mat-button-wrapper">Voir le panier</span>
+        <div matripple="" class="mat-button-ripple mat-ripple"></div>
+        <div class="mat-button-focus-overlay"></div>
+      </button>
+
+      <!-- <h3 class="widget-title">Recherche</h3>
+      <form class="example-container" [formGroup]="filterForm">
+        <mat-form-field>
+          <mat-label>Description</mat-label>
+          <input placeholder="Description">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Price</mat-label>
+          <mat-slider min="1" max="1000" step="0.5" value="1"></mat-slider>
+        </mat-form-field>
+      </form>
+    </div> -->
+
+    </div>
+
+    <div id="articlesDiv" class="articlesDiv">
+      articles
+    </div>
+
+  </div>
+</div>
