--- a/mamikoFrontEnd/src/app/components/tree-categorie/tree-categorie.component.html
+++ b/mamikoFrontEnd/src/app/components/tree-categorie/tree-categorie.component.html
@@ -1,4 +1,4 @@
-<router-outlet>
+<div class="categoriesDiv">
 
     
         <!-- <span [hidden]="isDataLoaded" *ngFor="let rootCategorie of treeCategorie.rootCategories">
@@ -60,7 +60,4 @@
             <button mat-menu-item disabled>Velociraptor</button>
         </mat-menu>
   
-
-
-
-</router-outlet>
+    </div>
